# intentRecognition

./: CMakeLists.txt  README.md  googleTests.cpp  intentRecognition.cpp  intentRecognition.h  main.cpp
googletest/: CMakeLists.txt
